--- a/alexandria/app/build.gradle
+++ b/alexandria/app/build.gradle
@@ -37,5 +37,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:design:22.2.0'
 
 }
