--- a/alexandria/build.gradle
+++ b/alexandria/build.gradle
@@ -15,5 +15,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'http://maven.livotovlabs.pro/content/groups/public' }
     }
 }
